fix header logo on mobile

--- a/resources/assets/sass/_overrides.scss
+++ b/resources/assets/sass/_overrides.scss
@@ -49,8 +49,8 @@ body,html, #app{
 }
 
 .nav-item img{
-	max-height:3.75rem;
-	width:100%;
+	max-height: 3.75rem;
+    width: 40%;
 }
 
 /* INPUT */
